--- a/lab8/index.html
+++ b/lab8/index.html
@@ -225,12 +225,12 @@ map.setLayoutProperty('floodZones',"visibility", "visible");
 map.setLayoutProperty('povertyLevel',"visibility", "visible");
 map.setLayoutProperty('nychaBuildings',"visibility", "visible");
 
-map.setLayoutProperty('floodplain2020_100yr', 'visibility', 'visible');
-map.setLayoutProperty('floodplain2020_500yr', 'visibility', 'visible');
-map.setLayoutProperty('floodplain2050_100yr', 'visibility', 'visible');
-map.setLayoutProperty('floodplain2050_500yr', 'visibility', 'visible');
-map.setLayoutProperty('floodplain2100_100yr', 'visibility', 'visible');
-map.setLayoutProperty('floodplain2100_500yr', 'visibility', 'visible');  
+map.setLayoutProperty('floodplain2020_100yr', "visibility", "visible");
+map.setLayoutProperty('floodplain2020_500yr', "visibility", "visible");
+map.setLayoutProperty('floodplain2050_100yr', "visibility", "visible");
+map.setLayoutProperty('floodplain2050_500yr', "visibility", "visible");
+map.setLayoutProperty('floodplain2100_100yr', "visibility", "visible");
+map.setLayoutProperty('floodplain2100_500yr', "visibility", "visible");  
 
 
 var layerList = document.getElementById("menu");
